--- a/src/components/User/Issue/Sidebar/style.css
+++ b/src/components/User/Issue/Sidebar/style.css
@@ -1,4 +1,4 @@
-.userCommits__sidebar {
+.userissues__sidebar {
   display: inline-block;
   height: 100%;
   width: 25%;
@@ -8,7 +8,7 @@
   border-right: 2px solid #ccc;
 }
 
-.userCommits__sidebar > h2 {
+.userissues__sidebar > h2 {
   padding: 3%;
   width: 100%;
   position: fixed;
@@ -17,22 +17,22 @@
   box-shadow: 5px 5px 8px 5px rgba(200, 200, 200, .5);
 }
 
-.userCommitsSidebarItem__wrapper {
+.userissuesSidebarItem__wrapper {
   padding: 38% 0 30% 0;
   margin-bottom: 10%;
 }
 
-.userCommitsSidebar__item {
+.userissuesSidebar__item {
   padding-left: 5%;
   cursor: pointer;
   border-bottom: 2px solid #ccc;
 }
 
-.userCommitsSidebar__item:hover {
+.userissuesSidebar__item:hover {
   background-color: #fafafa;
 }
 
-.userCommitsSidebar__item.active {
+.userissuesSidebar__item.active {
   background-color: #eaeaea;
 }
 
