--- a/src/layouts/User/Issue/style.css
+++ b/src/layouts/User/Issue/style.css
@@ -1,4 +1,4 @@
-.userCommits__wrapper {
+.userissues__wrapper {
   width: 100%;
   height: 100%;
   display: flex;
@@ -7,11 +7,11 @@
   margin-top: 10%;
 }
 
-.userCommits__wrapper .header__wrapper {
+.userissues__wrapper .header__wrapper {
   box-shadow: none;
 }
 
-.userCommits__panelWrapper {
+.userissues__panelWrapper {
   position: fixed;
   top: 15%;
 }
