Add date params to advanced filter

--- a/src/components/Common/Search/style.css
+++ b/src/components/Common/Search/style.css
@@ -33,3 +33,15 @@
   height: 100%;
   margin: 4px 2px;
 }
+
+
+
+/******************** MEDIA QUERIES **********************/
+
+
+
+@media (max-width: 700px) {
+  .userSearch__input {
+    width: 60%;
+  }
+}
