--- a/src/components/User/Issue/AdvancedFilter/style.css
+++ b/src/components/User/Issue/AdvancedFilter/style.css
@@ -18,6 +18,12 @@
       display: block;
       font-weight: bold;
       margin: 5% 0; }
+    @media (max-width: 1000px) {
+      .header_filter-advanced form {
+        width: 70%; } }
+    @media (max-width: 700px) {
+      .header_filter-advanced form {
+        width: 100%; } }
   .header_filter-advanced .title {
     border-bottom: 1px solid #cccccc;
     padding: 1%;
