--- a/src/components/User/Issue/AdvancedFilter/style.scss
+++ b/src/components/User/Issue/AdvancedFilter/style.scss
@@ -23,6 +23,12 @@
       font-weight: bold;
       margin: 5% 0;
     }
+    @media (max-width: 1000px) {
+      width: 70%;
+    }
+    @media (max-width: 700px) {
+      width: 100%;
+    }
   }
 
   .title {
