--- a/src/components/User/Issue/Header/style.scss
+++ b/src/components/User/Issue/Header/style.scss
@@ -1,11 +1,11 @@
 .header__backbutton {
   display: inline-block;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
   background-position: center center; 
   background-repeat: no-repeat;
-  background-size: 40px 40px;
+  background-size: 30px 30px;
   background-image: url('../../../../images/common/arrow-back-button.svg');
 }
 
@@ -45,4 +45,20 @@
 .header__username,
 .header__backbutton {
   margin-right: 5%;
+}
+
+
+
+/******************** MEDIA QUERIES **********************/
+
+
+
+@media (max-width: 700px) {
+  .header__username {
+    display: none;
+  }
+
+  .header__advancedFilter {
+    margin-top: 5%;
+  }
 }
