--- a/src/components/User/Search/style.css
+++ b/src/components/User/Search/style.css
@@ -29,3 +29,15 @@
   height: 100%;
   margin: 4px 2px;
 }
+
+
+
+/******************** MEDIA QUERIES **********************/
+
+
+
+@media (max-width: 700px) {
+  .userSearch__input {
+    width: 60%;
+  }
+}
