--- a/src/components/User/style.css
+++ b/src/components/User/style.css
@@ -19,3 +19,15 @@
 .userDashboard__wrapper .userSearch__input {
   width: 20%;
 }
+
+
+
+/******************** MEDIA QUERIES **********************/
+
+
+
+@media (max-width: 700px) {
+  .userDashboard__wrapper .userSearch__input {
+    width: 60%;
+  }
+}
