--- a/src/components/User/List/style.scss
+++ b/src/components/User/List/style.scss
@@ -4,57 +4,67 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10%; }
+  margin-top: 10%;
+}
 
 .userList__content {
   align-self: flex-start;
   width: 100%;
   height: 100%;
-  position: fixed; }
+  position: fixed;
+}
 
 .userList__item {
   box-shadow: -1px 1px 3px 1px #dddddd;
   min-height: 150px;
   width: 70%;
   padding: 2%;
-  margin: 1%; }
+  margin: 1%;
+}
 
 .userList__body {
   margin-top: 5%;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column; }
+  flex-direction: column;
   @media (max-width: 900px) {
-    .userList__body {
-      margin-top: 15%; } }
+    margin-top: 15%;
+  }
   @media (max-width: 600px) {
-    .userList__body {
-      margin-top: 35%; } }
+    margin-top: 35%;
+  }
+}
 
 .userListItem__picture {
   width: 100px;
   height: 100px;
   border-radius: 50px;
-  display: inline-block; }
+  display: inline-block;
+}
 
 .userListItem__info {
   display: inline-block;
-  margin-left: 5%; }
+  margin-left: 5%;
   @media (max-width: 600px) {
-    .userListItem__info {
-      display: block; } }
+    display: block;
+  }
+}
 
 .userListItem__username {
-  font-size: 150%; }
+  font-size: 150%;
+}
 
 .userListItem__issue a {
   color: purple;
   font-size: 80%;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .userListItem__scores .value {
-  color: #aaaaaa; }
+  color: #aaaaaa;
+}
 
 .userListItem__scores .text {
-  font-weight: bold; }
+  font-weight: bold;
+}
