--- a/src/components/Common/Loading/style.scss
+++ b/src/components/Common/Loading/style.scss
@@ -2,29 +2,36 @@
   position: absolute;
   display: flex;
   height: 100%;
-  width: 100%; }
-  .Loading .Loader {
+  width: 100%;
+  .Loader {
     position: absolute;
     height: 100%;
     width: 100%;
     z-index: 1;
     display: flex;
     flex: 1 1;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, .7);
     justify-content: center;
-    align-items: center; }
-    .Loading .Loader div {
+    align-items: center;
+    div {
       padding: 5px;
       border-radius: 50%;
       background: #000000;
-      animation: animIn 0.5s ease-in-out 0s infinite; }
+      animation: animIn 0.5s ease-in-out 0s infinite;
+    }
+  }
+}
 
 @keyframes animIn {
   0% {
     transform: translateX(-100px);
-    opacity: 0; }
+    opacity: 0;
+  }
   50% {
-    opacity: 1; }
+    opacity: 1;
+  }
   100% {
     transform: translateX(100px);
-    opacity: 0; } }
+    opacity: 0;
+  }
+}
