--- a/src/components/Common/Search/style.scss
+++ b/src/components/Common/Search/style.scss
@@ -2,28 +2,40 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1; }
+  z-index: 1;
+}
 
 .userSearch__text,
 .userSearch__inputWrapper {
-  width: 100%; }
+  width: 100%;
+}
 
 .userSearch__text {
-  text-align: center; }
+  text-align: center;
+}
 
 .userSearch__input {
   display: block;
   width: 40%;
   height: 100%;
   color: #7a8996;
-  background-image: url("../../../images/common/user.svg");
-  background-position: 5px 5px;
+  background-image: url('../../../images/common/user.svg');
+  background-position: 5px 5px; 
   background-repeat: no-repeat;
-  background-size: 30px 40px; }
+  background-size: 30px 40px;
   @media (max-width: 700px) {
-    .userSearch__input {
-      width: 60%; } }
+    width: 60%;
+  }
+}
+
+.headerInput__filter:disabled {
+  background-color: rgba(200, 200, 200, .5);
+}
 
 .userSearch__submit button {
   height: 100%;
-  margin: 4px 2px; }
+  margin: 4px 2px;
+}
+
+
+
