--- a/src/components/User/Issue/AdvancedFilter/style.scss
+++ b/src/components/User/Issue/AdvancedFilter/style.scss
@@ -13,11 +13,9 @@
     width: 50%;
     background-color: white;
     border-radius: 5px;
-
     input {
       padding-left: 12px;
     }
-
     label {
       display: block;
       font-weight: bold;
@@ -40,7 +38,6 @@
     flex-direction: row;
     justify-content: space-between;
     border-radius: 5px 5px 0 0;
-
     .close {
       font-size: 200%;
       margin-right: 3%;
@@ -51,11 +48,9 @@
 
   .content {
     padding: 5%;
-
     .item {
       margin-bottom: 5%;
     }
-
     .input {
       width: 50%;
     }
@@ -88,6 +83,12 @@
         height: 70%;
         width: 30%;
       }
+      @media (max-width: 1000px) {
+        width: 70%;
+      }
+      @media (max-width: 700px) {
+        width: 80%;
+      }
     }
   }
 
@@ -98,7 +99,6 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-
     .close {
       background-color: #ccc;
       border-color: #ccc;
