--- a/src/components/User/Issue/Panel/style.scss
+++ b/src/components/User/Issue/Panel/style.scss
@@ -6,81 +6,98 @@
   position: fixed;
   overflow: scroll;
   margin: 3% 0;
-  background-color: #eee; }
-  .userissues__panel .empty {
+  background-color: #eee;
+  .empty {
     width: 100%;
     height: 100%;
     display: flex;
     color: #aaa;
     justify-content: center;
-    align-items: center; }
-  .userissues__panel > h4 {
+    align-items: center;
+  }
+  & > h4 {
     width: 100%;
     padding: 2%;
     z-index: 1;
     position: fixed;
     background-color: #eee;
-    border-bottom: 1px solid #aaa; }
-  .userissues__panel > h2 {
+    border-bottom: 1px solid #aaa;
+  }
+  & > h2 {
     width: 100%;
-    padding: 2%; }
+    padding: 2%;
+  }
   @media (max-width: 1000px) {
-    .userissues__panel {
-      margin-top: 5%; } }
+    margin-top: 5%;
+  }
   @media (max-width: 700px) {
-    .userissues__panel {
-      margin-top: 7%; } }
+    margin-top: 7%;
+  }
   @media (max-width: 600px) {
-    .userissues__panel {
-      margin-top: 9%; } }
+    margin-top: 9%;
+  }
+}
 
 .repo_description {
-  box-shadow: 5px 5px 8px 5px rgba(200, 200, 200, 0.5); }
-  .repo_description span {
-    color: #999; }
+  box-shadow: 5px 5px 8px 5px rgba(200, 200, 200, .5);
+  span {
+    color: #999;
+  }
   @media (max-width: 700px) {
-    .repo_description {
-      display: none; } }
+    display: none;
+  }
+}
 
 .issue__message,
 .issue__author,
 .issue__date,
 .issue__url {
   vertical-align: middle;
-  padding-bottom: 1%; }
+  padding-bottom: 1%;
+}
 
 .userissuesPanelItems__wrapper {
   width: 100%;
   padding-left: 3%;
-  margin: 10% 0 20% 0; }
+  margin: 10% 0 20% 0;
   @media (max-width: 1000px) {
-    .userissuesPanelItems__wrapper {
-      margin-top: 15%; } }
+    margin-top: 15%;
+  }
   @media (max-width: 700px) {
-    .userissuesPanelItems__wrapper {
-      margin-top: 20%; } }
+    margin-top: 20%;
+  }
+}
 
 .userissuesPanel__item {
   width: 100%;
   padding: 2%;
   height: 200px;
   background-color: white;
-  border-bottom: 2px solid #ddd; }
-  .userissuesPanel__item h5 {
-    margin: 1%; }
+  border-bottom: 2px solid #ddd;
+  h5 {
+    margin: 1%;
+  }
+}
 
 .issue__message {
-  width: 90%; }
+  width: 90%;
+}
 
 .issue__url {
-  width: 5%; }
+  width: 5%;
+}
 
 .issue__author {
-  color: darkgoldenrod; }
+  color: darkgoldenrod;
+}
 
 .issue__date {
-  color: #aaa; }
+  color: #aaa;
+}
 
 .issue__author,
 .issue__date {
-  width: 50%; }
+  width: 50%;
+}
+
+
