--- a/src/components/User/style.css
+++ b/src/components/User/style.css
@@ -2,32 +2,16 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
-}
-
-.userDashboard__wrapper .userSearch__wrapper {
-  position: fixed;
-  width: 100%;
-  height: 15%;
-  background-color: white;
-}
-
-.userDashboard__wrapper .userSearch__text {
-  font-size: 100%;
-}
-
-.userDashboard__wrapper .userSearch__input {
-  width: 20%;
-}
-
-
-
-/******************** MEDIA QUERIES **********************/
-
-
-
-@media (max-width: 700px) {
+  height: 100%; }
+  .userDashboard__wrapper .userSearch__wrapper {
+    position: fixed;
+    width: 100%;
+    height: 15%;
+    background-color: white; }
+  .userDashboard__wrapper .userSearch__text {
+    font-size: 100%; }
   .userDashboard__wrapper .userSearch__input {
-    width: 60%;
-  }
-}
+    width: 20%; }
+  @media (max-width: 700px) {
+    .userDashboard__wrapper .userSearch__input {
+      width: 60%; } }
